fix not visible dashboard

--- a/src/assets/styles/blocks/tasks.scss
+++ b/src/assets/styles/blocks/tasks.scss
@@ -1,6 +1,5 @@
 .tasks {
   padding: 3rem 5rem 1rem 5rem;
-  display: none;
 
   font-family: 'Roboto', sans-serif;
 }
